# transcendent-table-tennis

./: Cargo.toml  README.md  coverage.sh
client/src/: lib.rs
plato/: Cargo.toml
plato/src/: app.rs  app_state.rs  colors.rs  game.rs  input.rs  lib.rs  main.rs  math.rs  title_menu.rs  ui.rs
plato/src/math/: mod.rs  rect.rs  vec2.rs
plato/tests/: main_menu.rs
server/: Cargo.toml
server/src/: lib.rs
